wajig (2.7~pre) UNRELEASED; urgency=low

  * NEW, DETAILNEW, and DESCRIBENEW: make them do as the commands imply;
    Closes: #670687

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 19 Jun 2012 04:31:23 +0200

wajig (2.6.1) unstable; urgency=low

  * DISTUPGRADE: fix an exception triggered by specifying the --dist option

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sat, 16 Jun 2012 07:43:15 +0200

wajig (2.6) unstable; urgency=low

  * stop converting COMMANDS to uppercase... be like everyone else
  * polish bash auto-completion, by only auto-completing:
    - names of installed packages where no other name makes sense
    - names of all packages where no other name makes sense
    - names of files/directories where no other name makes sense
    for every other COMMAND, do not auto-complete at all (Reuben Thomas
    helped with this one)

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 23 May 2012 22:19:10 +0200

wajig (2.5.1) unstable; urgency=low

  * make licence DEP-5 compliant
  * DEPENDENTS: fix an exception that occurs when the sources.list only
    has Wheezy in it.

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Fri, 20 Apr 2012 14:05:30 +0200

wajig (2.5) unstable; urgency=low

  IMPROVEMENTS
  * improve bash completion, thanks again to Reuben Thomas; Closes: #597721
  * avoid displaying a stack trace when quitting an operation (Ctrl+C)
  * the --simulate and --teaching options now display the commands in bold;
    they now also have consistent spacing (single space) between
    non-whitespace characters
  * REMOVEORPHANS, PURGEORPHANS: for the sake of consistency with REMOVE
    and PURGE subcommands, use the --auto-remove option of apt-get;
    Closes: #444150
  * INSTALL, INSTALLSUGGESTED, NEWUPGRADES, AUTODOWNLOAD: use --auto-remove
    option. Seems a more sane way to have that as default, and leads to a
    less-surprising REMOVE/PURGE experience (whereby it would remove packages
    that are not related to packages being removed).